--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 	<head>
 	    <meta charset="utf-8">
-		<title>DemocracyOS UK</title>
-		 <meta name="author" content="Aaron Gray and Peter David Carter">
+		<title>Nakebook</title>
+		 <meta name="author" content="Ифан Аррис, Daisy Lewis, Peter David Carter, and all at NAKEBOOK!">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="icon" 
+		type="image/png" 
+		href="/img/nakeLogoMale.png">
 	</head>
 	<body>
 		<!-- Base element for app -->
@@ -14,128 +17,107 @@
 		<script type="text/template" id="template-AppLayoutView">
 			<div id="topbar">
 				<div class="innerLogo">
-					<img src="/img/logo-large4.png" height="36" wide="36">
+					<img src="/img/nakeHead.jpg" height="33" wide="110">
 				</div>
 			</div>
 			<div id="left-sidebar">
 				<div class="sidebar-text">
-				<p>Sidebar test.<p/>
-				</div>
-			</div>
-			<div id="main-text">
-				<h1 class="title">The Direct Democracy voting application</br> for the UK and The Green Party</h1>
-				<h2 class="title">A UK spin off of <a href="http://www.democracyos.org">DemocracyOS.org</h2>
-				<div id="navigation-bar">
-					<a id="nav-home" class="navButton" href="#home">Home</a>&nbsp;&nbsp;
-					<a id="nav-skills" class="navButton" href="#skills">Skills</a>&nbsp;&nbsp;
-					<a id="nav-resources" class="navButton" href="#resources">Resources</a>&nbsp;&nbsp;
-					<a id="nav-people" class="navButton" href="#people">People</a>&nbsp;&nbsp;
-					<a id="nav-contact" class="navButton" href="#contact">Contact</a>&nbsp;&nbsp;
-					<a id="nav-about" class="navButton" href="#about">About</a>
+				<p><p/>
 				</div>
 			</div>
 			<div id="ContentRegion"></div>
 			</div>
+			<div id="navigation-bar">
+					<a id="nav-home" class="navButton" href="#home">Home</a>&nbsp;&nbsp;
+					<a id="nav-members" class="navButton" href="#members">Members</a>&nbsp;&nbsp;
+					<a id="nav-album" class="navButton" href="#album">Album</a>&nbsp;&nbsp;
+					<a id="nav-newsfeed" class="navButton" href="#newsfeed">Newsfeed</a>&nbsp;&nbsp;
+					<a id="nav-contact" class="navButton" href="#contact">Contact</a>&nbsp;&nbsp;
+					<a id="nav-more" class="navButton" href="#more">Nakebook STUFF!</a>
+			</div>
 		</script>
 
-		<!-- home screen template -->
+		<!-- Main Page -->
 		<script type="text/template" id="template-HomeLayoutView">
 		<div id="main-content">
 			<div id="home">
-			    <h1>Home</h1>
-    			<div id="video">
-			        <iframe style="text-align: center;" width="560" height="315" src="https://www.youtube.com/embed/WfGMYdalClU" frameborder="0" allowfullscreen></iframe>
-			    </div>
+					<h1 class="title">Nakebook</br> </h1>
+					<h2 class="title">Be your most Naked self!</h2>
+			        <p>Bodies are natural things. We were born with them. We take them with us everywhere we go,
+					yet we are told that they are bad, sinful, a thing to be ashamed of. At Nakebook we believe
+					that bodies should not be locked away in shame until someone grabs you drunk at a party
+					and offers do the globe-jiggle. Negative attitudes to nudity have led many to become confused, 
+					often negative towards their own nakedness, particularly as the only models of nudity much of 
+					society sees are in pornography, where the kinds of nakedness on display are not those of the 
+					typical man or woman, and may lead people to consider themselves to be inadequate, when in fact they
+					are perfectly normal, healthy, *attractive* human beings.
+					</br></br>
+					More than this, when we cover up out bodies, often we find that we lose a part of ourselves with
+					it. A certain lack of expressive ability which may lead us to feel that we can only find true 
+					closeness  in sexual relationships or perhaps, in the worst cases, never at all. Our bodies can express 
+					who we are, what we feel, and what we want in ways that society doesn't always recognise. 
+					Nakebook believe that you are as free as you want to be, and your body is yours to do with as 
+					you choose. Your freedom is our freedom!</p>
 			</div>
 		</div>
 		</script>
 
-		<!-- skills screen templa te -->
-		<script type="text/template" id="template-SkillsLayoutView">
+		<!-- Member's List -->
+		<script type="text/template" id="template-MembersLayoutView">
 		<div id="main-content">
-			<div class="skills">
-    			<h1>Skills</h1>
-    			<p>DemocracyOS UK is looking for people with the right skills to help with this project.<p>
-    			<p>These are the kind of skills we are looking for. If you have one or more of these skills and you are interested then please get in contact :-
-    			<h2>Technical Skills</h2>
+			<div class="members">
+    			<h1>Members</h1>
+    			<h2>Founding members</h2>
     			<ul>
-    			    <li>JavaScript - reasonable knowledge of JavaScript.</li>
-    			    <li>HTML and ideally HTML 5</li>
-    			    <li>CSS and ideally CSS 3</li>
-    			    <li>Jade HTML Templating</li>
-    			    <li>Styl CSS Templating system</li>
-    			    <li>component.js - component framework</li>
-    			    <li>Node.js and Node Application Libraries on NPM and GitHub</li>
-    			    <li>GIT - Source Code Management System</li>
-    			    <li>DemocracyOS framework itself</li>
-    			    <li>Knowledge of the UK Parlimentary system API's and information systems</li>
-    			    <li>Website functionality testing</li>
-    			    <li>Cloud Deployment</li>
+    			    <li>Daisy Lewis</li>
+    			    <li>Ифан Аррис</li>
     			</ul>
 
-    			<h2>Non Software Programming Skills</h2>
+    			<h2>Other members</h2>
     			<ul>
-    			    <li>Testing website content</li>
-    			    <li>Copywriting</li>
-    			    <li>Proof Readers</li>
-    			    <li>Knowledge of the UK Parlimentary system</li>
-    			    <li>Administration of Parlimentary documentation</li>
-    			    <li>DemocracyOS administration</li>
+    			    <li>Peter Carter</li>
+    			    <li>[Put anyone else who wants to be listed on here later]</li>
     			</ul>
     		</div>
 		</div>
 		</script>
 
-		<script type="text/template" id="template-ResourcesLayoutView">
+		<script type="text/template" id="template-AlbumLayoutView">
 		<div id="main-content">
-			<div class="resources">
-    			<h1>Resources</h1>
-    			<p>This is a set of resources for people interested in DemocracyOS</p>
-    			<a href="http://democracyos.org/">http://democracyos.org/</a><br>
-    			<a href="http://github.com/democracyos">http://github.com/democracyos</a><br>
-    			<a href="http://github.com/UKDemocracyOS">http://github.com/UKDemocracyOS</a><br>
+			<div class="album">
+    			<h1>Album</h1>
+				<img src="img/nakeCollage.jpg">
     		</div>
+		</div>
+		</script>
+
+		<script type="text/template" id="template-NewsfeedLayoutView">
+		<div id="main-content">
+		    <div class="newsfeed">
+		    	<h1>News</h1>
+		    	<ul>
+    			    <li>02/05/2015: Website launched today!</li>
+    			</ul>
+		    </div>
 		</div>
 		</script>
 
 		<script type="text/template" id="template-ContactLayoutView">
 		<div id="main-content">
-		    <div class="contact">
-		    	<h1>Contacts</h1>
-		    	<p>This is the contact page</p>
-		    </div>
-		</div>
-		</script>
-
-		<script type="text/template" id="template-PeopleLayoutView">
-		<div id="main-content">
-			<div class="people">
-				<h1>People and roles</h1>
+			<div class="contact">
+				<h1>Contact</h1>
 				<ul>
-				<li>Christopher Pane - Green Party Project Coordinator</li>
-    			<li>Aaron Nathaniel Gray - Project Lead, Architect, and Project Software Porter</li>
-    			<li>Peter David Carter - Front-end Development, Administrative Programmer, and Documentation Lead</li>
+				<li>Site creator and manager: Peter David Carter: <a href="mailto:peter.carter.mail@gmail.com">peter.carter.mail@gmail.com</a></li>
 				</ul>
     		</div>
 		</div>
 		</script>
 
-		<script type="text/template" id="template-AboutLayoutView">
+		<script type="text/template" id="template-MoreLayoutView">
 		<div id="main-content">
-			<div class="about">
-				<h1>About</h1>
-    		    <p>DemocracyOS UK is a revolutionary web-system aimed at changing the way our political system works.</p>
-    		    <p>The current UK political system is a vast, bizarre, often baffling mess of traditions and beliefs that
-    		    should have been dismantled years ago. All around us technology, people, the entire world is changing,
-    		    yet our political system has remained the same for hundreds of years.</p>
-    		    <p>DemocracyOS is changing that. With DemocracyOS you can show your party, and the world,
-    		    what you think of laws before they come to vote. More than that, you can also propose your
-    		    own laws, and see them voted for in real time by the public at large.</p>
-    		    <p>The system is adapted from the original pioneered by Partido de la Red,
-    		    an Argentinian grass-roots movement who use it for all their internal and political decision making.
-    		    The power and flexibility is such that it allows real-time exchange of view-points, and the creation of laws
-    		    that represent the genuine will of the people.</p>
-    		    <p>With DemocracyOS UK, we can change politics !</p>
+			<div class="more">
+				<h1>More...</h1>
+    		    <p>We will be adding more content to this section in the near future.</p>
     		</div>
 		</div>
 		</script>
